--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -192,7 +192,7 @@
     private void OpenProfileModal()
     {
         isProfileOpen = true;
-        isUserMenuOpen = false; // Fecha o menu de usuário ao abrir o modal
+        isUserMenuOpen = false;
     }
 
     private void ToggleSidebar()
